Spacing fixes. Footer link fix.

--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -326,7 +326,7 @@
     @extend .left
 
   .labor_force
-    @extend .blend-top
+    @extend .blend-bottom
 
     h3
       color: $medium
@@ -450,6 +450,10 @@
         &.active
           margin-top: 0
           opacity: 1
+
+  .quotation.paul
+    @extend .blend-bottom
+
   .outro
     .second
       font-family: $caslon-bold
