--- a/css/sass/_chapter3.sass
+++ b/css/sass/_chapter3.sass
@@ -288,14 +288,14 @@
       font-size: 13px
 
   .warning
-    @extend .blend
+    @extend .blend-top
 
   .sheryl_garrett
     @extend .left
     @extend .blend
 
     .contents
-      background-position: 92% 70px !important
+      background-position: 92% 0 !important
 
   .investor_underperforms
     @extend .blend-top
