--- a/css/sass/_footer.sass
+++ b/css/sass/_footer.sass
@@ -33,6 +33,7 @@ footer
 
         a
           display: block
+          height: 145px
           text-decoration: none
 
           .label
